--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <!-- Header section  -->
     <header class="header">
-      <div class="header-container">
+      <div class="header-container container">
       <nav class="header-nav">
         <a href="./index.html" class="logo"
           >Web<span class="span-logo">Studio</span></a>
-        <ul class="adress-list">
+        <ul class="list adress-list">
           <li>
             <a href="./index.html" class="nav nav-studio">Studio</a>
           </li>
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address class="adress" id="contacts">
+      <address class="adress">
         <ul class="contacts-list">
           <li>
             <a class="contacts" href="mailto:info@devstudio.com"
@@ -50,22 +50,22 @@
     <!-- Main content -->
     <main>
       <!-- Main Section 1 -->
-      <section class="dark-bg">
+      <section class="hero" >
         <div class="container">
-        <h1 class="dark-bg-title">Effective Solutions for Your Business</h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="button-s" type="button">Order Service</button>
         </div>
       </section>
 
       <!-- Main Section 2 -->
-      <section class="section-advantages">
+      <section class="section-advantages ">
         <div class="container">
-        <h2 class="visually-hidden">Title</h2>
+        <h2 class="inv-content visually-hidden">Title</h2>
 
         <ul class="section-feature">
           <li class="feature">
             <div class="icon-feature">
-              <svg width="64" height="64">
+              <svg class="feature-icon" width="64" height="64">
               <use href="./images/icons.svg#icon-antenna" />
               </svg>
             </div>
@@ -78,7 +78,7 @@
 
           <li class="feature">
             <div class="icon-feature">
-              <svg width="64" height="64">
+              <svg class="feature-icon" width="64" height="64">
               <use href="./images/icons.svg#icon-clock" />
               </svg>
             </div>
@@ -91,7 +91,7 @@
 
           <li class="feature">
             <div class="icon-feature">
-              <svg width="64" height="64">
+              <svg class="feature-icon" width="64" height="64">
               <use href="./images/icons.svg#icon-diagram" />
               </svg>
             </div>
@@ -104,7 +104,7 @@
 
           <li class="feature">
             <div class="icon-feature">
-              <svg width="64" height="64">
+              <svg class="feature-icon" width="64" height="64">
               <use href="./images/icons.svg#icon-astronaut" />
               </svg>
             </div>
@@ -118,7 +118,7 @@
         </div>
       </section>
     <!-- Main Section 3 -->
-      <section class="light-bg">
+      <section class="team-section">
         <div class="container">
         <h2 class="team">Our Team</h2>
 
@@ -135,25 +135,25 @@
             <p class="team-job">Product Designer</p>
           <ul class="social-team">
             <li class="social-icons-links">
-              <a href="https://www.instagram.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://www.instagram.com/" >
                 <svg class="social-icons" width="16" height="16">
                 <use href="./images/icons.svg#icon-instagram"/>
                 </svg></a>
             </li>
             <li class="social-icons-links">
-              <a href="https://twitter.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://twitter.com/" >
                 <svg class="social-icons" width="16" height="16">
                 <use href="./images/icons.svg#icon-twitter"/>
                 </svg></a>
             </li>
             <li class="social-icons-links">
-              <a href="https://www.facebook.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://www.facebook.com/" >
                 <svg class="social-icons" width="16" height="16">
                 <use href="./images/icons.svg#icon-facebook"/>
                 </svg></a>
             </li>
             <li class="social-icons-links">
-              <a href="https://www.linkedin.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://www.linkedin.com/" >
                 <svg class="social-icons" width="16" height="16">
                 <use href="./images/icons.svg#icon-linkedin"/>
                 </svg></a>
@@ -173,27 +173,27 @@
             <p class="team-job">Frontend Developer</p>
             <ul class="social-team">
             <li class="social-icons-links">
-              <a href="https://www.instagram.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://www.instagram.com/" >
                 <svg class="social-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram"/>
+                <use class="review-icon" href="./images/icons.svg#icon-instagram"/>
                 </svg></a>
             </li>
             <li class="social-icons-links">
-              <a href="https://twitter.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://twitter.com/" >
                 <svg class="social-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"/>
+                <use class="review-icon" href="./images/icons.svg#icon-twitter"/>
                 </svg></a>
             </li>
             <li class="social-icons-links">
-              <a href="https://www.facebook.com/" class="social-icon-link">
+              <a class="social-icon-link"href="https://www.facebook.com/" >
                 <svg class="social-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"/>
+                <use class="review-icon" href="./images/icons.svg#icon-facebook"/>
                 </svg></a>
             </li>
             <li class="social-icons-links">
-              <a href="https://www.linkedin.com/" class="social-icon-link">
+              <a class="social-icon-link" href="https://www.linkedin.com/" >
                 <svg class="social-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"/>
+                <use class="review-icon" href="./images/icons.svg#icon-linkedin"/>
                 </svg></a>
             </li>
           </ul>
@@ -281,7 +281,7 @@
         </div>
       </section>
       <!-- Main Section 4 -->
-      <section class="portfolio">
+      <section class="portfolio ">
         <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
@@ -395,9 +395,10 @@
 
     </main>
     <!-- Footer section -->
-    <footer class="dark-bgg">
+    <footer class="footer">
       <div class="container footer-div">
-      <div class="footer-logo"><a class="logo-footer" href="./index.html">Web<span class="span-logo-footer">Studio</span></a
+      <div class="footer-logo">
+        <a href="./index.html" class="logo-footer">Web<span class="span-logo-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
@@ -508,5 +509,70 @@
       </div>
 
     </div>
+    <!-- Mobile -->
+    <div class="mobile-menu">
+    <button class="menu-btn" type="button">
+      <svg class="menu-btn-icon" width="8" height="8">
+        <use href="./images/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+
+    <ul class="mobile-menu-list">
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-link current" href="">Studio</a>
+      </li>
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-link" href="">Portfolio</a>
+      </li>
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-link" href="">Contacts</a>
+      </li>
+    </ul>
+
+    <div class="mobile-menu-wrapper">
+      <ul class="mobile-menu-contacts">
+        <li class="mobile-menu-item">
+          <a class="mobile-menu-contact accent" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a class="mobile-menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+      </ul>
+      <ul class="mobile-menu-socials">
+        <li class="socials-item">
+          <a class="socials-link" href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+            aria-label="instagram site">
+            <svg class="socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link" href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+            aria-label="twitter site">
+            <svg class="socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link" href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+            aria-label="facebook site">
+            <svg class="socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link" href="https://linkedin.com" target="_blank" rel="noopener noreferrer"
+            aria-label="linkedin site">
+            <svg class="socials-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
   </body>
 </html>
